[package]
name = "yew_timeline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-console = "0.2.3"
gloo-storage = "0.2.2"
gloo-utils = "0.1.6"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
wasm-bindgen = "0.2.84"
yew = { version = "0.20.0", features = ["csr"] }

[dependencies.web-sys]
version = "0.3"
features = [
    "DragEvent",
    "Element",
    "HtmlElement",
]
